--- a/src/app/components/payroll/payroll.component.html
+++ b/src/app/components/payroll/payroll.component.html
@@ -62,6 +62,7 @@
   </div>
 
   <app-dialog
+    style="position: relative;"
     #uploadDialog
     [title]="'Upload Files'"
     [confirmText]="'Start Upload'"
