--- a/src/app/components/widgets/titlebar/titlebar.component.html
+++ b/src/app/components/widgets/titlebar/titlebar.component.html
@@ -15,23 +15,22 @@
   </div>
 
   <div class="window-controls">
+
     <button title="Minimize" (click)="minimize()">
       <svg aria-hidden="true" version="1.1" width="10" height="10">
-        <path d="M 0,5 10,5 10,6 0,6 Z" />
+        <path d="M 0,5 10,5 10,6 0,6 Z"></path>
       </svg>
     </button>
     <button [title]="buttonText" (click)="maximizeOrRestore()">
       <svg aria-hidden="true" version="1.1" width="10" height="10">
         <path
-          d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z"
-        />
+          d="m 2,1e-5 0,2 -2,0 0,8 8,0 0,-2 2,0 0,-8 z m 1,1 6,0 0,6 -1,0 0,-5 -5,0 z m -2,2 6,0 0,6 -6,0 z"></path>
       </svg>
     </button>
     <button title="Close" (click)="close()">
       <svg aria-hidden="true" version="1.1" width="10" height="10">
         <path
-          d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z"
-        />
+          d="M 0,0 0,0.7 4.3,5 0,9.3 0,10 0.7,10 5,5.7 9.3,10 10,10 10,9.3 5.7,5 10,0.7 10,0 9.3,0 5,4.3 0.7,0 Z"></path>
       </svg>
     </button>
   </div>
