--- a/src/app/components/mainapp/mainapp.component.html
+++ b/src/app/components/mainapp/mainapp.component.html
@@ -1,4 +1,46 @@
-<app-sidebar></app-sidebar>
+<app-sidebar>
+  <li class="header">MAIN NAVIGATION</li>
+
+  <li
+    title="Dashboard"
+    class="treeview"
+    routerLinkActive
+    #das="routerLinkActive"
+    [routerLink]="['dashboard']"
+    [class.active]="das.isActive"
+  >
+    <a href="#"> <i class="fa fa-dashboard"></i> <span> Dashboard</span> </a>
+  </li>
+
+  <li
+    title="My ATM's"
+    class="treeview"
+    routerLinkActive
+    #atms="routerLinkActive"
+    [routerLink]="['myatms']"
+    [class.active]="atms.isActive"
+  >
+    <a href="#"> <i class="fa fa-credit-card"></i> <span> My ATM's</span> </a>
+  </li>
+
+  <li
+    title="App Settings"
+    class="treeview"
+    routerLinkActive
+    #apset="routerLinkActive"
+    [routerLink]="['/admin/settings']"
+    [class.active]="apset.isActive"
+  >
+    <a href="#"> <i class="fa fa-gears"></i> <span> App Settings</span> </a>
+  </li>
+
+  <li title="Sign Out" class="treeview">
+    <a href="#">
+      <i class="fa fa-sign-out" aria-hidden="true"></i>
+      <span> Sign Out</span>
+    </a>
+  </li>
+</app-sidebar>
 
 <div class="content-wrapper" [@fadeAnimation]="getRouterOutletState(o)">
   <router-outlet #o="outlet"></router-outlet>
