--- a/src/app/components/widgets/sidebar/sidebar.component.html
+++ b/src/app/components/widgets/sidebar/sidebar.component.html
@@ -3,76 +3,22 @@
     <div class="user-panel">
       <div class="pull-left image">
         <img
-          src="./assets/images/dp.png"
+          [src]="
+            userImage === null || userImage === ''
+              ? 'assets/images/dp.png'
+              : userImage
+          "
           class="img-circle"
-          alt="{{ bank != null ? bank.bank_name : '---' }}"
         />
       </div>
       <div class="pull-left info">
-        <p>{{ bank != null ? bank.bank_name : '---' }}</p>
-        <a *ngIf="bank"><i class="fa fa-circle text-success"></i> Online</a>
+        <p>{{ userName }}</p>
+        <a><i class="fa fa-circle text-success"></i> {{ moreText }}</a>
       </div>
     </div>
 
     <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">MAIN NAVIGATION</li>
-
-      <li
-        title="Dashboard"
-        class="treeview"
-        routerLinkActive
-        #das="routerLinkActive"
-        [routerLink]="['/admin/dashboard']"
-        [class.active]="das.isActive"
-      >
-        <a href="#">
-          <i class="fa fa-dashboard"></i> <span> Dashboard</span>
-        </a>
-      </li>
-
-      <li
-        title="My ATM's"
-        class="treeview"
-        routerLinkActive
-        #atms="routerLinkActive"
-        [routerLink]="['myatms']"
-        [class.active]="atms.isActive"
-      >
-        <a href="#">
-          <i class="fa fa-credit-card"></i> <span> My ATM's</span>
-        </a>
-      </li>
-
-      <li
-        title="ATM Reports"
-        class="treeview"
-        routerLinkActive
-        #brod="routerLinkActive"
-        [routerLink]="['/admin/messaging']"
-        [class.active]="brod.isActive"
-      >
-        <a href="#">
-          <i class="fa fa-bullhorn"></i> <span> ATM Reports</span>
-        </a>
-      </li>
-
-      <li
-        title="App Settings"
-        class="treeview"
-        routerLinkActive
-        #apset="routerLinkActive"
-        [routerLink]="['/admin/settings']"
-        [class.active]="apset.isActive"
-      >
-        <a href="#"> <i class="fa fa-gears"></i> <span> App Settings</span> </a>
-      </li>
-
-      <li title="Sign Out" class="treeview" (click)="logout()">
-        <a href="#">
-          <i class="fa fa-sign-out" aria-hidden="true"></i>
-          <span> Sign Out</span>
-        </a>
-      </li>
+      <ng-content></ng-content>
     </ul>
   </section>
 </aside>
