--- a/src/app/components/mainapp/dashboard/dashboard.component.html
+++ b/src/app/components/mainapp/dashboard/dashboard.component.html
@@ -6,15 +6,17 @@
         [title]="'ATM\'s Count'"
         [color]="'bg-aqua'"
         [icon]="'fa fa-credit-card'"
+        [value]="atmData == null ? 0 : atmData.data.length"
       >
       </app-small-box>
     </div>
 
     <div class="col-md-6 col-sm-6 col-xs-12">
       <app-small-box
-        [title]="'ATM Reports'"
+        [title]="'ATM Managers'"
         [color]="'bg-red'"
-        [icon]="'glyphicon glyphicon-bullhorn'"
+        [icon]="'fa fa-user'"
+        [value]="managerData == null ? 0 : managerData.data.length"
       >
       </app-small-box>
     </div>
@@ -25,43 +27,62 @@
       <!-- MAP & BOX PANE -->
       <div id="myBox" class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">ATM Reports</h3>
+          <h3 class="box-title">ATM List</h3>
 
           <div class="box-tools pull-right">
-            <button
-              type="button"
-              class="btn btn-box-tool"
-              data-widget="collapse"
-            >
-              <i class="fa fa-minus"></i>
-            </button>
-            <button type="button" class="btn btn-box-tool" data-widget="remove">
-              <i class="fa fa-times"></i>
+            <button type="button" class="btn btn-default pull-right">
+              <i class="fa fa-plus"></i> Add ATM
             </button>
           </div>
         </div>
         <!-- /.box-header -->
-        <div class="box-body" id="scrollingBox">
-          <ul class="products-list product-list-in-box">
-            <!--<li class="item" *ngFor="let report of reportsList">-->
-            <!--<div class="product-img">-->
-            <!--<img-->
-            <!--src="../../../assets/images/default-50x50.gif"-->
-            <!--alt="{{ report.personName }}"-->
-            <!--/>-->
-            <!--</div>-->
-            <!--<div class="product-info">-->
-            <!--<span class="product-title"-->
-            <!--&gt;<b>From: </b> {{ report.personName }}</span-->
-            <!--&gt;-->
-            <!--<span class="label label-warning pull-right">dd</span>-->
-
-            <!--<span class="product-description"> {{ report.query }} </span>-->
-            <!--</div>-->
-            <!--</li>-->
-          </ul>
+        <div class="box-body">
+          <table class="table table-bordered table-striped">
+            <thead class="no-select">
+              <tr>
+                <th>Name</th>
+                <th>Location</th>
+                <th>Coordinate</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody *ngIf="atmData">
+              <tr *ngFor="let atm of atmData.data">
+                <td>
+                  <a style="cursor: pointer;">{{ atm.name }}</a>
+                </td>
+                <td>{{ atm.city }}</td>
+                <td>
+                  <b>Lat:</b>{{ atm.coordinate.lat }} <b>Lng:</b
+                  >{{ atm.coordinate.lng }}
+                </td>
+                <td>
+                  <span
+                    class="label"
+                    [class.label-success]="atm.status == 0"
+                    [class.label-warning]="atm.status == 1"
+                    [class.label-danger]="atm.status == 2"
+                  ></span>
+                  <span *ngIf="atm.status == 0">Online</span>
+                  <span *ngIf="atm.status == 1">Offline</span>
+                  <span *ngIf="atm.status == 2">Offline</span>
+                </td>
+                <td>
+                  <app-switch
+                    #switch
+                    class="center"
+                    [isChecked]="atm.status == 0 || atm.status == 1"
+                    (ontoggled)="toggle($event, atm.id)"
+                  ></app-switch>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <!-- /.box-body -->
+        <div class="box-footer clearfix no-border">
+          <app-paginater [max]="5" [upto]="5"></app-paginater>
+        </div>
       </div>
     </div>
   </div>
