--- a/src/app/components/mainapp/myatms/myatms.component.scss
+++ b/src/app/components/mainapp/myatms/myatms.component.scss
@@ -9,3 +9,12 @@
 .loading {
   height: 150px;
 }
+
+thead {
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: sticky;
+  top: 0px;
+}
